--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <title>Portal for QA</title>
       <link rel="stylesheet" type="text/css" href="css/style.css">
       <link rel="stylesheet" type="text/css" href="css/font-awesome.css">
-      <link rel="shortcut icon" href="img/fav.ico" type="image/x-icon">
+      <link rel="shortcut icon" href="img/star.ico" type="image/x-icon">
       <link href="https://fonts.googleapis.com/css?family=Montserrat:700" rel="stylesheet">
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,12 +12,12 @@
    <body>
       <!--Card-->
       <div class="card animated fadeIn">
-         <center><img class="center animated rollIn" src="img/ava.png" alt="avatar"></center>
+         <center><img class="center animated rollIn" src="img/star.png" alt="avatar"></center>
          <hr>
          <div class="name">
-            Основные Инструменты
+            Тестирование WEB-приложений
          </div>
-         <p class="subtitle">Тестирование WEB-приложений</p>
+         <p class="subtitle">Основные Инструменты</p>
          <p class="location" align="center">
             <a href="html/cmd.html">Командная строка Windows</a>
          </p>
